# rawgrep

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.cpp
